スタイルを調整

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,4 +1,4 @@
-@import "~bootstrap/scss/bootstrap"; 
+@import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 
 $utakata-blue: #0095d9;
@@ -155,7 +155,7 @@ a:hover {
 
 .tanka-index {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh - 51px;
   white-space: nowrap;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -163,7 +163,7 @@ a:hover {
 
 .user-show {
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh - 51px;
   overflow-x: scroll;
   overflow-y: hidden;
 }
