--- a/app/views/posts/followers.html.erb
+++ b/app/views/posts/followers.html.erb
@@ -1,6 +1,6 @@
 <% @title = "#{9829.chr("UTF-8")}#{ApplicationController.helpers.strip_tags(@post.tanka)}" %>
 
-<div class = "vertical serif tanka-index mt-3">
+<div class = "vertical serif tanka-index nowrap mt-3">
   <h6>
     <%= link_to @post.tanka.html_safe, post_path(id: @post.id), method: :get, class: 'tanka-link' %>&nbsp;
     <% if user_signed_in? && current_user.id != @post.user_id %>
