--- a/app/views/posts/my_search.html.erb
+++ b/app/views/posts/my_search.html.erb
@@ -1,6 +1,6 @@
 <% @title = '自作短歌検索' %>
 
-<div class = "vertical serif tanka-index mt-3">
+<div class = "vertical serif tanka-index nowrap mt-3">
   <h6>
     「<%= @search %>」で検索：<%= link_to '短歌', search_posts_path(search: @search), method: :get %>｜自分の短歌｜<%= link_to '歌人', search_users_path(search: @search), method: :get %>
   </h6>
