--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,6 +1,6 @@
 <% @title = '短歌検索' %>
 
-<div class = "vertical serif tanka-index mt-3">
+<div class = "vertical serif tanka-index nowrap mt-3">
   <h6>
     「<%= @search %>」で検索：短歌｜<!--
     --><% if user_signed_in? %><!--
