--- a/app/views/users/followees.html.erb
+++ b/app/views/users/followees.html.erb
@@ -1,6 +1,6 @@
 <% @title = @user.name + 'のフォロー' %>
 
-<div class = "vertical serif tanka-index mt-3">
+<div class = "vertical serif tanka-index nowrap mt-3">
   <h6>
     <%= link_to @user.name, user_path(id: @user.id), method: :get %>のフォロー｜<%= link_to 'フォロワー', followers_user_path(id: @user.id), method: :get %>
   </h6>
