--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,6 +1,6 @@
 <% @title = '歌人検索' %>
 
-<div class = "vertical serif tanka-index mt-3">
+<div class = "vertical serif tanka-index nowrap mt-3">
   <h6>
     「<%= @search %>」で検索：<%= link_to '短歌', search_posts_path(search: @search), method: :get %>｜<!--
     --><% if user_signed_in? %><!--
