--- a/app/views/users/timeline.html.erb
+++ b/app/views/users/timeline.html.erb
@@ -1,6 +1,6 @@
 <% @title = 'タイムライン' %>
 
-<div class="vertical serif tanka-index mt-3">
+<div class="vertical serif tanka-index nowrap mt-3">
   <%= paginate @posts %>
   <%= render 'layouts/posts' %>
   <%= paginate @posts %>
