--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -155,7 +155,7 @@ a:hover {
 
 .tanka-index {
   width: 100%;
-  min-height: 100vh - 51px;
+  min-height: calc(100vh - 51px);
   white-space: nowrap;
   overflow-x: scroll;
   overflow-y: hidden;
