検索結果の切り替え表示を変更

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -41,6 +41,7 @@
     <dd>
       <ul class="ml">
         <li>フォロー／フォロワーの切り替え表示を変更</li>
+        <li>検索結果の切り替え表示を変更</li>
       </ul>
     </dd>
     <dt><time>2020/11/01</time></dt>
