--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,13 +1,17 @@
-<% @title = '短歌検索' %>
+<% @title = "「#{@search}」で短歌を検索" %>
 
 <div class = "vertical serif tanka-index nowrap mt-3">
-  <h6>
-    「<%= @search %>」で検索：短歌｜<!--
-    --><% if user_signed_in? %><!--
-    --><%= link_to '自分の短歌', my_search_posts_path(search: @search), method: :get %>｜<!--
-    --><% end %><!--
-    --><%= link_to '歌人', search_users_path(search: @search), method: :get %>
-  </h6>
+  <ul class="nav nav-tabs vertical-tab">
+    <li class="nav-item">
+      <a class="nav-link active vertical-tab">短歌</a>
+    </li>
+    <li class="nav-item">
+      <%= link_to '自分の短歌', my_search_posts_path(search: @search), method: :get, class: 'nav-link vertical-tab text-secondary' %>
+    </li>
+    <li class="nav-item">
+      <%= link_to '歌人', search_users_path(search: @search), method: :get, class: 'nav-link vertical-tab text-secondary' %>
+    </li>
+  </ul>
   <%= paginate @posts %>
   <%= render 'layouts/posts' %>
   <%= paginate @posts %>
