--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,6 +1,6 @@
 <% @title = 'いいねした歌' %>
 
-<div class="vertical serif tanka-index nowrap mt-3">
+<div class="vertical serif tanka-index text-nowrap mt-3">
   <%= paginate @posts %>
   <%= render 'layouts/posts' %>
   <%= paginate @posts %>
