--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -1,6 +1,6 @@
 <% @title = '通知' %>
 
-<div class = "vertical serif tanka-index nowrap mt-3">
+<div class = "vertical serif tanka-index text-nowrap mt-3">
   <%= paginate @notifications %>
   <% @notifications.each do |notification| %>
     <p>
