--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,6 +1,6 @@
 <% @title = "#{@user.name}のフォロワー" %>
 
-<div class = "vertical serif tanka-index nowrap mt-3">
+<div class = "vertical serif tanka-index text-nowrap mt-3">
   <ul class="nav nav-tabs vertical-tab">
     <li class="nav-item">
       <%= link_to 'フォロー', followees_user_path(id: @user.id), method: :get, class: 'nav-link vertical-tab text-secondary' %>
