--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <% @title = '歌人一覧' %>
 
-<div class = "vertical serif tanka-index nowrap mt-3">
+<div class = "vertical serif tanka-index text-nowrap mt-3">
   <h6>歌人一覧</h6>
   <%= paginate @users %>
   <% @users.each do |user| %>
