ユーザーページでいいねの表示が一部改行されてしまう問題を解消

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -42,6 +42,7 @@
       <ul class="ml">
         <li>フォロー／フォロワーの切り替え表示を変更</li>
         <li>検索結果の切り替え表示を変更</li>
+        <li>ユーザーページでいいねの表示が一部改行されてしまう問題を解消</li>
       </ul>
     </dd>
     <dt><time>2020/11/01</time></dt>
