--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,16 +27,18 @@
     <%= simple_format raw(Rinku.auto_link(h(@user.profile), :all, 'target="_blank"')), class: 'sm border-primary p-3 rounded ml-0 h-88' %>
   <% end %>
   <%= paginate @posts %>
-  <% @posts.each do |post| %>
-    <p>
-      <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link text-nowrap' %>&nbsp;
-      <% if user_signed_in? && current_user.id != post.user_id %>
-        <span class="mb-3"><%= render 'favorites/favorites', post: post, size: 'sm' %></span>
-      <% else %>
-        <i class="sm fas fa-heart"></i><!--
-        --><span class="sm like mb-3"><%= post.followers_by_type_count('User') %></span>
-      <% end %>
-    </p>
-  <% end %>
+  <div class="text-nowrap">
+    <% @posts.each do |post| %>
+      <p>
+        <%= link_to post.tanka.html_safe, post_path(id: post.id), method: :get, class: 'tanka-link' %>&nbsp;
+        <% if user_signed_in? && current_user.id != post.user_id %>
+          <span class="mb-3"><%= render 'favorites/favorites', post: post, size: 'sm' %></span>
+        <% else %>
+          <i class="sm fas fa-heart"></i><!--
+          --><span class="sm like mb-3"><%= post.followers_by_type_count('User') %></span>
+        <% end %>
+      </p>
+    <% end %>
+  </div>
   <%= paginate @posts %>
 </div>
