「サイトのご案内」連絡先でメールアプリを起動するように変更

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -31,12 +31,18 @@
   <h4 class="mt-4">連絡先</h4>
   <p>不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
   <ul class="ml">
-    <li>Email：utakatanka@gmail.com</li>
+    <li>Email：<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a></li>
     <li>Twitter：<a href="https://twitter.com/utakatanka" target="_blank">@utakatanka</a></li>
     <li>管理人のTwitter：<a href="https://twitter.com/fuyu77" target="_blank">@fuyu77</a></li>
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/11/09</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>「サイトのご案内」連絡先でメールアプリを起動するように変更</li>
+      </ul>
+    </dd>
     <dt><time>2020/11/02</time></dt>
     <dd>
       <ul class="ml">
