自己紹介の表示が分離される問題を解消

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -37,6 +37,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/11/16</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>自己紹介の表示が分離される問題を解消</li>
+      </ul>
+    </dd>
     <dt><time>2020/11/09</time></dt>
     <dd>
       <ul class="ml">
