--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -46,7 +46,7 @@
     <dt><time>2020/11/09</time></dt>
     <dd>
       <ul class="ml">
-        <li>「サイトのご案内」連絡先でメールアプリを起動するように変更</li>
+        <li>「連絡先」でメールアプリを起動するように変更</li>
       </ul>
     </dd>
     <dt><time>2020/11/02</time></dt>
