--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -60,7 +60,7 @@
     <dt><time>2020/11/01</time></dt>
     <dd>
       <ul class="ml">
-        <li>プロフィールの表示が崩れいている問題を解消</li>
+        <li>自己紹介の表示が崩れいている問題を解消</li>
         <li>横スクロールバーの位置が低い問題を解消</li>
       </ul>
     </dd>
