--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -70,6 +70,12 @@
         <li>歌人ページで横スクロールバーの位置が高すぎる問題を解消</li>
       </ul>
     </dd>
+    <dt><time>2020/09/20</time></dt>
+    <dd>
+      <ul class="ml">
+        <li><a href="https://fuyu.hatenablog.com/entry/2020/09/21/214449" target="_blank">AWS S3に保存したアイコン画像が第三者による攻撃ですべて削除されてしまう被害が発生</a>したため、S3の設定を変更</li>
+      </ul>
+    </dd>
     <dt><time>2020/08/14</time></dt>
     <dd>
       <ul class="ml">
