--- a/app/views/privacy/index.html.erb
+++ b/app/views/privacy/index.html.erb
@@ -5,7 +5,7 @@
   <h4 class="mt-4">プライバシーポリシー</h4>
   <p>Utakata管理者は、サービスにおける利用者の情報を下記のように扱います。本プライバシーポリシーは、予告なく改定されることがあります。</p>
   <h5 class="mt-4">メールアドレス</h5>
-  <p>メールアドレス認証の場合、アカウントを登録する際、メールアドレスによる本人確認を行います。メールアドレスは公開されません。メールアドレスはサービス内で保存され、利用されます。</p>
+  <p>メールアドレスは公開されません。メールアドレスはサービス内で保存され、利用されます。</p>
   <h5 class="mt-4">パスワード</h5>
   <p>メールアドレス認証の場合、登録されたパスワードはハッシュ化された後に保存され、ログイン時に利用されます。ハッシュ化は不可逆なアルゴリズムのため、実際のパスワードの文字列については、管理者も確認できない仕組みになっています。</p>
   <h5 class="mt-4">情報の削除</h5>
