--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -44,7 +44,7 @@
     <dt><time>2020/11/28</time></dt>
     <dd>
       <ul class="ml">
-        <li>アカウント登録時のメールアドレス確認を廃止</li>
+        <li>アカウント登録時のメールアドレス確認を一時的に停止</li>
       </ul>
     </dd>
     <dt><time>2020/11/16</time></dt>
