--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -38,7 +38,7 @@
     <dt><time>2020/11/30</time></dt>
     <dd>
       <ul class="ml">
-        <li>Twitter連携ログイン時の不具合を解消</li>
+        <li>Twitter連携アカウント登録・ログイン時の不具合を解消</li>
       </ul>
     </dd>
     <dt><time>2020/11/28</time></dt>
