すべてのメールアドレス記載ページでメールアプリを起動するように変更

--- a/app/views/terms/index.html.erb
+++ b/app/views/terms/index.html.erb
@@ -21,7 +21,7 @@
   <p>また、Utakataの利用に起因して発生した諸々の不利益について、原則として管理者は責任を負いかねます。</p>
   <h5 id="contacts" class="mt-4">連絡先</h5>
   <ul class="ml">
-    <li>Email：utakatanka@gmail.com</li>
+    <li>Email：<a href="mailto:utakatanka@gmail.com" target="_blank">utakatanka@gmail.com</a></li>
     <li>Twitter：<a href="https://twitter.com/utakatanka" target="_blank">@utakatanka</a></li>
     <li>管理人のTwitter：<a href="https://twitter.com/fuyu77" target="_blank">@fuyu77</a></li>
   </ul>
