--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,7 @@
     <dd>
       <ul class="ml">
         <li>Twitter連携アカウント登録・ログイン時の不具合を解消</li>
+        <li>すべてのメールアドレス記載ページでメールアプリを起動するように変更</li>
       </ul>
     </dd>
     <dt><time>2020/11/28</time></dt>
