--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -35,6 +35,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/12/10</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>広告を導入</li>
+      </ul>
+    </dd>
     <dt><time>2020/11/30</time></dt>
     <dd>
       <ul class="ml">
@@ -45,7 +51,7 @@
     <dt><time>2020/11/28</time></dt>
     <dd>
       <ul class="ml">
-        <li>アカウント登録時のメールアドレス確認を一時的に停止</li>
+        <li>アカウント登録時のメールアドレス確認を廃止</li>
       </ul>
     </dd>
     <dt><time>2020/11/16</time></dt>
