--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -245,3 +245,9 @@ h6 {
   right: 0;
   z-index: 999999;
 }
+
+@media screen and (min-width: 992px) {
+  .tanka-index {
+    min-height: calc(100vh - 67px);
+  }
+}
