いいねした歌人の一覧画面が開けなかった問題を解消

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -38,6 +38,7 @@
     <dt><time>2020/12/28</time></dt>
     <dd>
       <ul class="ml">
+        <li>いいねした歌人の一覧画面が開けなかった問題を解消</li>
         <li>レイアウトを調整</li>
       </ul>
     </dd>
