--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,7 +6,7 @@
       <ul class="sm">
         <p class="description">ルビを振りたい文字列を選択して、「ルビ」ボタンをタップし、&lt;rt&gt;〜&lt;/rt&gt;の間にルビを入力してください</p>
       </ul>
-      <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', 'data-target': 'post.input', 'data-action': 'keyup->post#previewPost compositionend->post#previewPost' %>
+      <%= f.text_area :tanka, rows: 3, autofocus: true, class: 'form-control', 'data-post-target': 'input', 'data-action': 'keyup->post#previewPost compositionend->post#previewPost' %>
     </div>
     <div class="form-group">
       <%= f.submit "投稿する", class: 'btn btn-success' %>
@@ -15,5 +15,5 @@
       <button type="button" class="btn btn-primary" data-action="click->post#space">全角スペース</button>
     </div>
   <% end %>
-  <div class="vertical serif mx-auto text-nowrap" data-target="post.preview"></div>
+  <div class="vertical serif mx-auto text-nowrap" data-post-target="preview"></div>
 </div>
