投稿制限のリセット時刻のタイムゾーンがズレていた問題を修正

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -35,6 +35,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2021/05/17</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>投稿制限のリセット時刻のタイムゾーンがズレていた問題を修正</li>
+      </ul>
+    </dd>
     <dt><time>2021/05/16</time></dt>
     <dd>
       <ul class="ml">
