文言の調整

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -38,7 +38,7 @@
     <dt><time>2021/05/17</time></dt>
     <dd>
       <ul class="ml">
-        <li>投稿制限のリセット時刻のタイムゾーンがズレていた問題を修正</li>
+        <li>投稿制限のリセット時刻のタイムゾーンがズレていた問題を解消</li>
       </ul>
     </dd>
     <dt><time>2021/05/16</time></dt>
