--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -1,7 +1,7 @@
 <% @title = 'サイトのご案内' %>
 <% @description = '短歌投稿サイトUtakataの概要・使い方・連絡先・更新履歴など。' %>
 
-<div class="col-lg-5 mx-auto">
+<div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">サイトのご案内</h4>
   <h5 class="mt-4">Utakataとは？</h5>
   <p>短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。全機能を無料でご利用いただけます。</p>
@@ -39,6 +39,7 @@
     <dd>
       <ul class="ml">
         <li>サイトのパフォーマンスを改善</li>
+        <li>レイアウトを全体的に調整</li>
       </ul>
     </dd>
     <dt><time>2021/06/01</time></dt>
@@ -276,7 +277,7 @@
     <dd>
       <ul class="ml">
         <li>アイコンを角丸に変更</li>
-        <li>表示レイアウトを全体的に調整</li>
+        <li>レイアウトを全体的に調整</li>
       </ul>
     </dd>
     <dt><time>2019/03/03</time></dt>
