--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <% @title = '短歌投稿' %>
 
-<div data-controller="post" class="col-lg-5 mx-auto">
+<div data-controller="post" class="col-11 col-lg-5 mx-auto">
   <%= form_for(@post, url: { controller: :posts, action: :create }) do |f| %>
     <div class="form-group mt-3">
       <ul class="sm">
