--- a/app/views/privacy/index.html.erb
+++ b/app/views/privacy/index.html.erb
@@ -1,7 +1,7 @@
 <% @title = 'プライバシーポリシー' %>
 <% @description = '短歌投稿サイトUtakataのプライバシーポリシー。' %>
 
-<div class="col-lg-5 mx-auto">
+<div class="col-11 col-lg-5 mx-auto">
   <h4 class="mt-4">プライバシーポリシー</h4>
   <p>Utakata管理者は、サービスにおける利用者の情報を下記のように扱います。本プライバシーポリシーは、予告なく改定されることがあります。</p>
   <h5 class="mt-4">メールアドレス</h5>
