--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
 <% @title = 'パスワード再設定用メール送信' %>
 
-<div class="col-lg-5 mx-auto">
+<div class="col-11 col-lg-5 mx-auto">
   <h5 class="mt-4 form-group">パスワード再設定用メール送信</h5>
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <div class="field form-group">
