--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,21 +1,21 @@
 <% @title = '設定' %>
 <% user = current_user %>
 
-<div class="col-lg-5 mx-auto">
+<div class="col-11 col-lg-5 mx-auto">
   <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
-    <li class="nav-item">
-      <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">プロフィール</a>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link active" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">プロフィール</a>
     </li>
     <% unless user.provider == 'twitter' %>
-    <li class="nav-item">
-      <a class="nav-link" id="mail-tab" data-toggle="tab" href="#mail" role="tab" aria-controls="mail" aria-selected="false">メールアドレス</a>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" id="mail-tab" data-bs-toggle="tab" href="#mail" role="tab" aria-controls="mail" aria-selected="false">メールアドレス</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password" aria-selected="false">パスワード</a>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" id="password-tab" data-bs-toggle="tab" href="#password" role="tab" aria-controls="password" aria-selected="false">パスワード</a>
     </li>
     <% end %>
-    <li class="nav-item">
-      <a class="nav-link" id="delete-tab" data-toggle="tab" href="#delete" role="tab" aria-controls="delete" aria-selected="false">アカウント削除</a>
+    <li class="nav-item" role="presentation">
+      <a class="nav-link" id="delete-tab" data-bs-toggle="tab" href="#delete" role="tab" aria-controls="delete" aria-selected="false">アカウント削除</a>
     <li>
   </ul>
   <div class="tab-content" id="myTabContent">
