--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <% @title = '新規アカウント登録' %>
 <% @description = '短歌投稿サイトUtakataのアカウント登録を行えます。' %>
 
-<div class="col-lg-5 mx-auto">
+<div class="col-11 col-lg-5 mx-auto">
   <h5 class="mt-4 form-group">Twitterアカウントで登録する</h5>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <div class="form-group actions">
