--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,13 +1,13 @@
 <header>
-  <nav class="navbar navbar-expand navbar-dark py-0">
+  <nav class="navbar navbar-expand-lg navbar-dark py-0">
     <%= link_to 'Utakata', posts_path, class: 'navbar-brand' %>
     <% if user_signed_in? %>
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item form-inline mr-2">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item form-inline me-2">
           <%= link_to content_tag(:i, '', class: 'fas fa-bell'), notifications_user_path(id: current_user.id), method: :get %><span class="sm text-white top"><%= notifications_count %></span>
         </li>
         <li class="nav-item dropdown">
-          <div class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <%= image_tag current_user.avatar.url(:medium), class: 'rounded' %>
           </div>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -20,9 +20,9 @@
             <div class="dropdown-divider"></div>
             <%= link_to 'ご案内', infos_path, method: :get, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
-            <div class="px-2 py-2" data-controller="navbar">
+            <div class="px-2 py-2">
               <%= form_tag(search_posts_path, method: :get) do %>
-                <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索', 'data-action': 'click->navbar#preventBootstarapNativeEvent' %>
+                <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索' %>
               <% end %>
             </div>
           </div>
@@ -39,7 +39,7 @@
       <%= form_tag(search_posts_path, method: :get) do %>
         <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm form-width', type: 'search', placeholder: '短歌 / 歌人を検索' %>
       <% end %>
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item active">
           <%= link_to '登録', new_user_registration_path, class: 'nav-link' %>
         </li>
@@ -47,6 +47,6 @@
           <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
         </li>
       </ul>
-    <% end %>   
+    <% end %>
   </nav>
 </header>
