--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <% @title = "#{9998.chr("UTF-8")}#{ApplicationController.helpers.strip_tags(@post.tanka)}" %>
 
-<div data-controller="post" class="col-lg-5 mx-auto">
+<div data-controller="post" class="col-11 col-lg-5 mx-auto">
   <%= form_for(@post, url: { controller: :posts, action: :update }) do |f| %>
     <div class="form-group mt-3">
       <%= f.label :投稿日時 %>
