広告を廃止

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -35,6 +35,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2021/06/01</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>広告を廃止</li>
+      </ul>
+    </dd>
     <dt><time>2021/05/17</time></dt>
     <dd>
       <ul class="ml">
